--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
@@ -11,46 +12,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="31dp"
         android:text="time"
         android:textSize="30sp" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="open time picker" />
 
     <EditText
         android:id="@+id/notification_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="100dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Title"/>
-
+        android:hint="Title"
+        android:inputType="textPersonName" />
     <EditText
         android:id="@+id/notification_message"
-        ndroid:hint="Message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/notification_title"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="99dp"
         android:ems="10"
-        android:hint="Message"/>
+        android:hint="Message" />
+
+    <Button
+        android:id="@+id/btn_chanel1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chanel 1" />
+    <Button
+        android:id="@+id/btn_chanel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chanel 2" />
 
 
-</RelativeLayout>
+</LinearLayout>
